--- a/src/app/main/activite-physique-form/activite-physique-form.component.html
+++ b/src/app/main/activite-physique-form/activite-physique-form.component.html
@@ -6,14 +6,11 @@
     </button>
   </div>
 
-  <h1 mat-dialog-title>Su une echelle de 1 à 5, notez les activités physiques suivantes : </h1>
+  <h1 mat-dialog-title>Sur une echelle de 1 à 5, notez les activités physiques suivantes : </h1>
   <div mat-dialog-content>
     <p>Sachant que 1 réflétera "Je n'aime pas du tout cette activité et je ne la pratiquerai jamais" <br> et 5 étant
       "J'aime beaucoup cette activité extrêmement motivé pour la pratiquer" ?</p>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
-      <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
 
       <!-- Name Column -->
       
