--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -50,3 +50,9 @@ footer{
 :host ::ng-deep .mat-form-field-wrapper{
   padding: 0;
 }
+
+@media screen and (max-width: 576px) {
+  .flex {
+   flex-direction: column;
+  }
+}
