--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer>
     <h4>Vos traitements actuels</h4>
-    <form class="box">
+    <form class="box flex">
         <mat-form-field class="full-width" appearance="fill">
           <mat-label>Aucun</mat-label>
           <span matPrefix></span>
