--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -12,13 +12,13 @@ img{
     cursor: pointer;
 }
 
-.flex{
+/*.flex{
     flex-flow: row wrap;
-}
+}*/
 
 .full-width-dialog .mat-dialog-container {
     max-width: 100vw !important;
-  }
+}
 
 @media screen and (max-width: 576px) {
     .flex {
